# sverk_rover

./: .bash_history  .bashrc  .gitignore  README.md  README_ROVER_V0_4_3.md  test_led_strip.py
.config/rover/: devices.json
.local/share/nano/: search_history
.local/state/sverh-rover-web/: activity.jsonl
.ros/rosdep/sources.cache/: index
hackathon_files/: example_hackathon.html  example_hackathon.md
models/: README.md  yolov5n.yaml  yolov8.sample.yaml.example
src/rosboard/: README.md  package.xml  setup.py
src/rosboard/launch/: rosboard.launch.py
src/rosboard/rosboard/html/: index.html
src/rosboard/rosboard/html/css/: index.css
src/rosboard/rosboard/html/js/: index.js
src/rosboard/rosboard/html/js/viewers/: TFViewer.js
src/rosboard/rosboard/html/js/viewers/meta/: Space3DViewer.js  Viewer.js
src/rover_base_driver/: package.xml  setup.cfg  setup.py
src/rover_base_driver/config/: motor_board.yaml
src/rover_base_driver/rover_base_driver/: base_driver_node.py  configure_motor_board.py  kinematics.py  quad_md_protocol.py
src/rover_bringup/: package.xml  setup.cfg  setup.py
src/rover_bringup/config/: rover.yaml  twist_mux.yaml
src/rover_bringup/launch/: hardware.launch.py  mapping.launch.py  navigation.launch.py  robot.launch.py  update_map.launch.py
src/rover_camera/: package.xml  setup.cfg  setup.py
src/rover_camera/config/: camera.yaml
src/rover_camera/rover_camera/: usb_camera_node.py
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/launch/: description.launch.py  display_lidar.launch.py  display_model.launch.py  display_navigation.launch.py  display_odom.launch.py  display_slam.launch.py
src/rover_description/rviz/: display_navigation.rviz  display_odom.rviz  display_slam.rviz  lidar_config.rviz  rover.rviz
src/rover_description/urdf/: rover.urdf.xacro
src/rover_device_manager/: package.xml  setup.cfg  setup.py
src/rover_device_manager/rover_device_manager/: discover_devices.py  discovery.py  setup_devices.py
src/rover_imu/: package.xml  setup.cfg  setup.py
src/rover_imu/rover_imu/: imu_normalizer_node.py  yahboom_imu_node.py  yahboom_imu_protocol.py
src/rover_interfaces/: CMakeLists.txt  package.xml
src/rover_interfaces/msg/: LEDStateArray.msg  LedStripState.msg  OctolinerReading.msg  WheelCommand.msg  WheelEncoders.msg
src/rover_interfaces/srv/: GetFrame.srv  SetLEDEffect.srv  SetLEDs.srv  SetLedStripState.srv  SetSensitivity.srv
src/rover_led_strip/: README.md  package.xml  setup.cfg  setup.py
src/rover_led_strip/config/: led_strip.yaml
src/rover_led_strip/launch/: led_strip.launch.py
src/rover_led_strip/resource/: rover_led_strip
src/rover_led_strip/rover_led_strip/: __init__.py  led_backend.py  led_strip_node.py  ws2812_spidev.py
src/rover_localization/: CMakeLists.txt  package.xml
src/rover_localization/config/: ekf_wheel_only.yaml  ekf_with_imu.yaml
src/rover_localization/launch/: localization.launch.py
src/rover_navigation/: package.xml  setup.cfg  setup.py
src/rover_navigation/config/: nav2_params.yaml  slam_toolbox_params.yaml
src/rover_navigation/launch/: navigation.launch.py  slam.launch.py  update_map.launch.py
src/rover_navigation/maps/: README.md
src/rover_navigation/maps/archive/: README.md
src/rover_navigation/maps/archive/imported_default_20260618_235540/: map_info.json
src/rover_navigation/maps/archive/laba_20260619_001938/: map.data  map.pgm  map.yaml  map_info.json
src/rover_navigation/maps/current/: map.data  map.pgm  map.yaml  map_info.json
src/rover_navigation/rover_navigation/: map_manager.py
src/rover_octoliner/: package.xml  setup.cfg  setup.py
src/rover_octoliner/config/: octoliner.yaml
src/rover_octoliner/launch/: octoliner.launch.py
src/rover_octoliner/resource/: rover_octoliner
src/rover_octoliner/rover_octoliner/: __init__.py  octoliner_driver.py  octoliner_node.py
src/rover_teleop/: package.xml  setup.py
src/rover_teleop/config/: teleop.yaml
src/rover_teleop/rover_teleop/: mecanum_keyboard.py
src/rover_vision/: package.xml  setup.py
src/rover_vision/config/: vision.yaml
src/rover_vision/launch/: vision.launch.py
src/rover_vision/resource/: rover_vision
src/rover_vision/rover_vision/: __init__.py  camera_detector_node.py  model_registry.py
src/rover_web/: package.xml  setup.cfg  setup.py
src/rover_web/config/: robot_identity.yaml  web.yaml
src/rover_web/deploy/nginx/: sverh-rover-web.conf
src/rover_web/deploy/systemd/: sverh-rover-rosbridge.service  sverh-rover-terminal.service  sverh-rover-web-gateway.service
src/rover_web/launch/: web.launch.py
src/rover_web/plans/: odom_test_contour.yaml  odom_test_contour_v2_backup.yaml  web_route.yaml  zigzag_test.yaml
src/rover_web/rover_web/: web_gateway_node.py
src/rover_web/tools/: rover_motion_executor.py  rover_terminal_shell.sh  rover_web_shell.sh
src/rover_web/web/: index.html
src/rover_web/web/assets/: app.js  rosbridge-client.js  styles.css
src/rover_wheel_odometry/: package.xml  setup.cfg  setup.py
src/rover_wheel_odometry/rover_wheel_odometry/: wheel_odometry_node.py
