<?xml version="1.0"?>
<package format="3">
  <name>rover_base_driver</name>
  <version>0.2.0</version>
  <description>cmd_vel to four-wheel motor-controller commands and encoder feedback.</description>
  <maintainer email="maintainer@example.com">Rover Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rover_interfaces</depend>
  <exec_depend>python3-serial</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
