<?xml version="1.0"?>
<package format="3">
  <name>rover_description</name>
  <version>0.4.2</version>
  <description>URDF/Xacro model, TF frames and RViz views for the rover.</description>
  <maintainer email="maintainer@example.com">Rover Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
