<?xml version="1.0"?>
<package format="3">
  <name>rover_device_manager</name>
  <version>0.4.1</version>
  <description>Automatic detection and verification of rover serial devices.</description>
  <maintainer email="maintainer@example.com">Rover Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>python3-serial</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
