<?xml version="1.0"?>
<package format="3">
  <name>rover_led_strip</name>
  <version>0.1.0</version>
  <description>ROS 2 driver and controller for an addressable LED strip on the rover.</description>
  <maintainer email="maintainer@example.com">Rover Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>
  <depend>rover_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
