<?xml version="1.0"?>
<package format="3">
  <name>rover_localization</name>
  <version>0.2.0</version>
  <description>robot_localization EKF configuration for wheel odometry and IMU.</description>
  <maintainer email="maintainer@example.com">Rover Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_localization</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
