<?xml version="1.0"?>
<package format="3">
  <name>rover_web</name>
  <version>0.1.0</version>
  <description>Minimal web server for the rover UI.</description>
  <maintainer email="maintainer@example.com">Rover Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
