<?xml version="1.0"?>
<package format="3">
  <name>rover_wheel_odometry</name>
  <version>0.2.0</version>
  <description>Wheel odometry for a four-wheel mecanum rover.</description>
  <maintainer email="maintainer@example.com">Rover Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>rover_interfaces</depend>
  <export><build_type>ament_python</build_type></export>
</package>
